# DGFEM-Acoustic

./: .gitignore  CMakeLists.txt  README.md  build.sh  m_fNodeTags_t.txt  residuals.csv  residuals.txt  results.pvd  run_caa
cases/2d_hilltop/: 2d_hilltop.conf  2d_hilltop.geo  2d_hilltop.json  2d_hilltop.med  2d_hilltop.msh  2d_hilltop.step  2d_hilltop_2.hdf  2d_hilltop_fs.brep  2d_hilltop_fs.geo  2d_hilltop_fs.msh  bump.geo  bump.json  bump.med  bump.msh  bump.step  hilltop_curve.geo  hilltop_curve.ply  hilltop_curve.py  hilltop_curve.txt  rectangle.geo  rectangle.json  rectangle.msh
data/: data.csv
doc/2d/: square.geo  square.msh  square2.msh
doc/3d/: sphere.msh
doc/config/: Amphi_Pulse_3D.conf  Cube.conf  Room_2D.conf  Sphere.conf  Square.conf  Square.json  Urban.conf  Urban_3D.conf  config.conf  land.conf
include/: Mesh.h  configParser.h  eqEdit.h  err.h  fft.h  solver.h  utils.h
src/: CMakeLists.txt  Mesh.cpp  configParser.cpp  dgalerkin.cpp  eqEdit.cpp  fft.cpp  solver.cpp  utils.cpp
src/wave/: CMakeLists.txt  file.h
